# OpenGL_demos

./: .gitignore  CMakeLists.txt  README.md  remember.txt  techincal_instructions.txt
blender/: didymos_binary.blend  maze.blend
demos/: NiceHera.txt  compile_all.bat  compile_batch.bat  d10_dir_light.cpp  d12_point_light_atten.cpp  d13_texture_scene.cpp  d17_imgui_basic_io.cpp  d18_imgui_mesh_control.cpp  d19_imgui_plot.cpp  d1_black_window.cpp  d20_imgui_thread_lag.cpp  d22_face_culling.cpp  d23_blur_via_fbo.cpp  d24_shadow_from_dir_light.cpp  d25_asteroid.cpp  d26_didymos_dynamics.cpp  d2_colored_window.cpp  d3_centered_window.cpp  d4_hello_triangle.cpp  d5_triangle_dynamic_color.cpp  d7_rotating_square.cpp  d8_transform_cube.cpp  d9_model_loading_via_mesh_class.cpp  demo1_aster_lightcurve_no_shadow.cpp  demo2_aster_lightcurve_with_shadow.cpp  demo2_didymos_dynamics.cpp  demo3.cpp  demo3_inputs.txt  demo3_patroclus_lightcurve_and_dynamics.cpp  demo3_record_aster_lightcurve.cpp  demo3_record_fast.cpp  demo3_record_rot_aster_lightcurve_with_shadow.cpp  demo4_aster_lightcurve_with_shadow.cpp  demo4_lightcurve.txt  demo5_aster_lightcurve_with_shadow_gpu.cpp  demo5_patroclus_lightcurve_and_dynamics.cpp  lc.txt  lightcurve.txt  plot_lightcurve.ipynb  plotlc.ipynb  (+3 more)
example/: black_window.cpp  centered_window.cpp  colored_window.cpp  didymos.cpp  dir_light.cpp  dynamic_text_aspect.cpp  first_triangle.cpp  flashlight.cpp  fps_count.cpp  free_camera.cpp  imgui.ini  imgui_ak47.cpp  imgui_basic_io.cpp  imgui_hello_window.cpp  imgui_triangle_control.cpp  model_loading.cpp  (+9 more)
(+155 files in other folders)
